--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -19,7 +19,7 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <ul class="navbar-nav ml-auto">
           <% if user_signed_in? %>
-            <li class="nav-item active">
+            <li class="nav-item">
               <a class="nav-link" href="#">投稿一覧</a>
             </li>
             <li class="nav-item">
@@ -32,7 +32,7 @@
               <a class="nav-link" href="#">ログアウト</a>
             </li>
           <% else %>
-            <li class="nav-item active">
+            <li class="nav-item">
               <a class="nav-link" href="#">投稿一覧</a>
             </li>
             <li class="nav-item">
