--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -29,7 +29,7 @@
               <a class="nav-link" href="#">ユーザーページ</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">ログアウト</a>
+              <%= link_to 'ログアウト', destroy_user_session_path, class: 'nav-link', method: :delete %>
             </li>
           <% else %>
             <li class="nav-item">
@@ -42,7 +42,7 @@
               <a class="nav-link" href="#">About</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">新規登録・ログイン</a>
+              <%= link_to "githubで登録・ログイン", user_github_omniauth_authorize_path, class: 'nav-link', method: :post %>
             </li>
           <% end %>
           </ul>
