--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -50,7 +50,14 @@
       </nav>
     </header>
     <main>
-      <%= yield %>
+      <div class="container">
+        <div class="row">
+          <% if notice.present? %>
+            <div class="alert alert-secondary col-12 mt-2"><%= notice %></div>
+          <% end %>
+          <%= yield %>
+        </div>
+      </div>
     </main>
     <footer>
       
