--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,2 +1,64 @@
-<h1>Users#show</h1>
-<p>Find me in app/views/users/show.html.erb</p>
+<div class="col-12 mt-3">
+  <h4 class="display-5"><i class="fas fa-book mr-2"></i>User / <%= @user.name %></h4>
+</div>
+<div class="col-12 col-lg-4">
+  <div class="card mt-3 h-100">
+    <div class="card-body">
+      <div class="d-flex justify-content-center">
+        <h4 class="card-title">Image</h4>
+      </div>
+      <div class="d-flex justify-content-between">
+        <h4 class="card-title">Name</h4>
+        <h4 class="card-title"><%= @user.name %></h4>
+      </div>
+      <div class="d-flex justify-content-between">
+        <h4 class="card-title">Contributions</h4>
+        <h4 class="card-title"><%= @user.contributions %></h4>
+      </div>
+      <div class="d-flex justify-content-between">
+        <h4 class="card-title">Follows</h4>
+        <h4 class="card-title"><a href="#">3</a></h4>
+      </div>
+      <div class="d-flex justify-content-between">
+        <h4 class="card-title">Followers</h4>
+        <h4 class="card-title"><a href="#">3</a></h4>
+      </div>
+      <div class="d-flex justify-content-between my-1">
+        <%= link_to "Visit GitHub", "#{@user.github_url}", class: "btn btn-dark w-100"%>
+      </div>
+      <div class="d-flex justify-content-between my-1">
+        <%= link_to "Follow", "#{@user.github_url}", class: "btn btn-outline-dark w-100"%>
+      </div>
+      <div class="d-flex justify-content-between my-1">
+        <%= link_to "Update Contributions", edit_user_path(@user.id), class: "btn btn-outline-dark w-100"%>
+      </div>
+    </div>
+  </div>
+</div>
+<div class="col-12 col-lg-8">
+  <div class="card mt-3 h-100">
+    <div class="card-body">
+      <div class="d-flex justify-content-center">
+        <h4 class="card-title">Posts</h4>
+      </div>
+      <table class="table">
+        <thead class="thead-light">
+          <tr>
+            <th>Genre</th>
+            <th>Title</th>
+          </tr>
+        </thead>
+        <tbody>
+          <tr>
+            <td>Mark</td>
+            <td>Otto</td>
+          </tr>
+          <tr>
+            <td>Jacob</td>
+            <td>Thornton</td>
+          </tr>
+        </tbody>
+      </table>
+    </div>
+  </div>
+</div>
