--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -1,2 +1,34 @@
-<h1>Users#edit</h1>
-<p>Find me in app/views/users/edit.html.erb</p>
+<div class="col-12 mt-3">
+  <h4 class="display-5"><i class="fas fa-book mr-2"></i>Update Contributions / <%= @user.name %></h4>
+</div>
+<div class="col-12 col-lg-4 mx-auto">
+  <div class="card mt-3 h-100">
+    <div class="card-body">
+      <div class="d-flex justify-content-center">
+        <h4 class="card-title">Image</h4>
+      </div>
+      <div class="d-flex justify-content-between">
+        <h4 class="card-title">Name</h4>
+        <h4 class="card-title"><%= @user.name %></h4>
+      </div>
+      <div class="d-flex justify-content-between">
+        <h4 class="card-title">Contributions</h4>
+        <h4 class="card-title"><%= @user.contributions %></h4>
+      </div>
+      <div class="d-flex justify-content-between">
+        <h4 class="card-title">Follows</h4>
+        <h4 class="card-title"><a href="#">3</a></h4>
+      </div>
+      <div class="d-flex justify-content-between">
+        <h4 class="card-title">Followers</h4>
+        <h4 class="card-title"><a href="#">3</a></h4>
+      </div>
+    <%= form_with model:@user, local:true do |f| %>
+        <%= f.text_field :contributions, value: @contributions, class: "form-control" %>
+        <div class="d-flex justify-content-between my-1">
+        <%= f.submit "Update", class: 'btn btn-outline-dark w-100' %>
+        </div>
+    <% end %>
+    </div>
+  </div>
+</div>
