--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -17,17 +17,23 @@
       </div>
       <div class="d-flex justify-content-between">
         <h4 class="card-title">Follows</h4>
-        <h4 class="card-title"><a href="#">3</a></h4>
+        <h4 class="card-title"><a href="#"><%= @user.follower.count %></a></h4>
       </div>
       <div class="d-flex justify-content-between">
         <h4 class="card-title">Followers</h4>
-        <h4 class="card-title"><a href="#">3</a></h4>
+        <h4 class="card-title"><a href="#"><%= @user.followed.count %></a></h4>
       </div>
       <div class="d-flex justify-content-between my-1">
         <%= link_to "Visit GitHub", "#{@user.github_url}", class: "btn btn-dark w-100"%>
       </div>
       <div class="d-flex justify-content-between my-1">
-        <%= link_to "Follow", "#{@user.github_url}", class: "btn btn-outline-dark w-100"%>
+        <% unless @user == current_user %>
+          <% if current_user.following?(@user) %>
+            <%= link_to 'Unfollow', unfollow_path(@user.id), class: "btn btn-outline-dark w-100", method: :POST %>
+          <% else %>
+            <%= link_to 'Follow', follow_path(@user.id), class: "btn btn-outline-dark w-100", method: :POST %>
+          <% end %>
+        <% end %>
       </div>
       <div class="d-flex justify-content-between my-1">
         <%= link_to "Update Contributions", edit_user_path(@user.id), class: "btn btn-outline-dark w-100"%>
