--- a/app/views/users/follows.html.erb
+++ b/app/views/users/follows.html.erb
@@ -22,7 +22,7 @@
               <td><%= link_to "#{user.name}", user_path(user) %></td>
               <td><%= link_to "#{user.follower.count}", user_follows_path(user) %></td>
               <td><%= link_to "#{user.followed.count}", user_followers_path(user) %></td>
-              <% unless user = current_user %>
+              <% if @user = current_user %>
                 <td>
                   <% if current_user.following?(user) %>
                     <%= link_to 'フォロー外す', unfollow_path(user.id), method: :POST %>
