--- a/app/views/users/followers.html.erb
+++ b/app/views/users/followers.html.erb
@@ -22,15 +22,15 @@
               <td><%= link_to "#{user.name}", user_path(user) %></td>
               <td><%= link_to "#{user.follower.count}", user_follows_path(user) %></td>
               <td><%= link_to "#{user.followed.count}", user_followers_path(user) %></td>
-              <% unless @user = current_user %>
-                <td>
+              <td>
+                <% unless user == current_user %>
                   <% if current_user.following?(user) %>
                     <%= link_to 'フォロー外す', unfollow_path(user.id), method: :POST %>
                   <% else %>
                     <%= link_to 'フォローする', follow_path(user.id), method: :POST %>
                   <% end %>
-                </td>
-              <% end %>
+                <% end %>
+              </td>
             </tr>
           <% end %>
         </tbody>
