--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -26,18 +26,20 @@
       <div class="d-flex justify-content-between my-1">
         <%= link_to "Visit GitHub", "#{@user.github_url}", class: "btn btn-dark w-100"%>
       </div>
+      <% unless @user == current_user %>
       <div class="d-flex justify-content-between my-1">
-        <% unless @user == current_user %>
-          <% if current_user.following?(@user) %>
-            <%= link_to 'Unfollow', unfollow_path(@user.id), class: "btn btn-outline-dark w-100", method: :POST %>
-          <% else %>
-            <%= link_to 'Follow', follow_path(@user.id), class: "btn btn-outline-dark w-100", method: :POST %>
-          <% end %>
+        <% if current_user.following?(@user) %>
+          <%= link_to 'Unfollow', unfollow_path(@user.id), class: "btn btn-outline-dark w-100", method: :POST %>
+        <% else %>
+          <%= link_to 'Follow', follow_path(@user.id), class: "btn btn-outline-dark w-100", method: :POST %>
         <% end %>
       </div>
-      <div class="d-flex justify-content-between my-1">
-        <%= link_to "Update Contributions", edit_user_path(@user.id), class: "btn btn-outline-dark w-100"%>
-      </div>
+      <% end %>
+      <% if @user == current_user %>
+        <div class="d-flex justify-content-between my-1">
+          <%= link_to "Update Contributions", edit_user_path(@user.id), class: "btn btn-outline-dark w-100"%>
+        </div>
+      <% end %>
     </div>
   </div>
 </div>
