--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -22,7 +22,7 @@
               <td><%= i %></td>
               <td><%= user.name %></td>
               <td><%= user.contributions %></td>
-              <td><%= link_to 'Show', user_path(user), class: "btn btn-outline-dark" %></td>
+              <td class="p-1"><%= link_to 'Show', user_path(user), class: "btn btn-outline-dark" %></td>
             </tr>
           <% end %>
         </tbody>
