--- a/app/views/posts/new.html.erb
+++ b/app/views/posts/new.html.erb
@@ -1,13 +1,29 @@
-<%= form_with model:@post, local:true do |f| %>
-  <div class="form-group">
-    <%= f.label :title %>
-    <%= f.text_field :title, class: 'form-control' %>
+<div class="col-12 mt-3">
+  <h4 class="display-5"><i class="fas fa-book mr-2"></i>Posts / New</h4>
+</div>
+<div class="col-12 col-lg-6 mx-auto">
+  <div class="card mt-3">
+    <div class="card-body">
+      <div class="d-flex justify-content-center">
+        <h4 class="card-title">New</h4>
+      </div>
+      <%= form_with model:@post, local:true do |f| %>
+        <div class="form-group">
+          <%= f.label :title %>
+          <%= f.text_field :title, class: 'form-control' %>
+        </div>
+        <div class="form-group">
+          <%= f.label :genre %>
+          <%= f.collection_select :genre_id, @genres, :id, :name, {prompt: '-- 選択してください --'}, class: "custom-select" %>
+        </div>
+        <div class="form-group">
+          <%= f.label :body %>
+          <%= f.text_area :body, class: 'form-control' %>
+        </div>
+        <div class="form-group">
+          <%= f.submit class: 'btn btn-success' %>
+        </div>
+      <% end %>
+    </div>
   </div>
-  <div class="form-group">
-    <%= f.label :opinion %>
-    <%= f.text_area :body, class: 'form-control' %>
-  </div>
-  <div class="form-group">
-    <%= f.submit class: 'btn btn-success' %>
-  </div>
-<% end %>
+</div>
