--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -13,15 +13,14 @@
             <th>Genre</th>
             <th>Title</th>
             <th>Name</th>
-            <th></th>
           </tr>
         </thead>
         <tbody>
           <% @posts.each do |post| %>
             <tr>
               <td><%= post.genre.name %></td>
-              <td><%= post.title %></td>
-              <td><%= post.user.name %></td>
+              <td><%= link_to post_path(post) do %><%= post.title %><% end %></td>
+              <td><%= link_to user_path(post.user) do %><%= post.user.name %><% end %></td>
             </tr>
           <% end %>
         </tbody>
