--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -13,6 +13,9 @@
       <div class="d-flex justify-content-center mb-3">
         <p class="card-text col-11"><%= @post.body %></p>
       </div>
+      <% if @post.user = current_user%>
+      <%= link_to "edit", edit_post_path(@post) %>
+      <% end %>
     </div>
   </div>
 </div>
