--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -14,7 +14,12 @@
         <p class="card-text col-11"><%= @post.body %></p>
       </div>
       <% if @post.user = current_user%>
-      <%= link_to "edit", edit_post_path(@post) %>
+        <div class="d-flex justify-content-center mb-3">
+          <p class="card-text col-11">
+            <%= link_to "edit", edit_post_path(@post) %>
+            <%= link_to 'destroy', post_path(@post), method: :delete, data: { confirm: '本当に消しますか？' } %>
+          </p>
+        </div>
       <% end %>
     </div>
   </div>
