--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -10,8 +10,8 @@
       <div class="d-flex justify-content-center mb-3">
         <p class="card-text"><%= @post.genre.name %></p>
       </div>
-      <div class="d-flex justify-content-center mb-3">
-        <p class="card-text col-11"><%= @post.body %></p>
+      <div class="col-11 mx-auto mb-3">
+        <%= markdown(@post.body) %>
       </div>
       <% if @post.user = current_user%>
         <div class="d-flex justify-content-center mb-3">
