--- a/app/views/posts/new.html.erb
+++ b/app/views/posts/new.html.erb
@@ -2,7 +2,7 @@
   <h4 class="display-5"><i class="fas fa-book mr-2"></i>Posts / New</h4>
 </div>
 <div class="col-12 col-lg-6 mx-auto">
-  <div class="card mt-3">
+  <div class="card mt-3 h-100">
     <div class="card-body">
       <div class="d-flex justify-content-center">
         <h4 class="card-title">New</h4>
@@ -27,3 +27,24 @@
     </div>
   </div>
 </div>
+<div class="d-none d-lg-block col-12 col-lg-6 mx-auto">
+  <div class="card mt-3 h-100">
+    <div class="card-body">
+      <div class="d-flex justify-content-center">
+        <h4 class="card-title">Preview</h4>
+      </div>
+      <div id="editor"class="justify-content-center">
+      </div>
+    </div>
+  </div>
+</div>
+<!-- リアルタイムプレビュー -->
+<script type="text/javascript">
+$(function() {
+var input = $('textarea');
+$(input).on('input', function(event) {
+    var value = $(input).val();
+    $('#editor').html(marked(value));
+  });
+});
+</script>
