--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -13,6 +13,7 @@
             <th>Genre</th>
             <th>Title</th>
             <th>Name</th>
+            <th></th>
           </tr>
         </thead>
         <tbody>
@@ -21,6 +22,7 @@
               <td><%= post.genre.name %></td>
               <td><%= link_to post_path(post) do %><%= post.title %><% end %></td>
               <td><%= link_to user_path(post.user) do %><%= post.user.name %><% end %></td>
+              <td><%= render 'favorites/fav', post: post %></td>
             </tr>
           <% end %>
         </tbody>
