--- a/app/views/relationships/_relationship.html.erb
+++ b/app/views/relationships/_relationship.html.erb
@@ -1,22 +1,22 @@
-      <div class="d-flex justify-content-between">
-        <h4 class="card-title">Follows</h4>
-        <h4 class="card-title"><%= link_to "#{user.follower.count}", user_follows_path(user.id) %></h4>
-      </div>
-      <div class="d-flex justify-content-between">
-        <h4 class="card-title">Followers</h4>
-        <h4 class="card-title"><%= link_to "#{user.followed.count}", user_followers_path(user.id) %></h4>
-      </div>
-      <div class="d-flex justify-content-between my-1">
-        <%= link_to "Visit GitHub", "#{user.github_url}", class: "btn btn-dark w-100"%>
-      </div>
-      <% if user_signed_in? %>
-        <% unless user == current_user %>
-          <div class="d-flex justify-content-between my-1">
-            <% if current_user.following?(user) %>
-              <%= link_to 'Unfollow', unfollow_path(user.id), class: "btn btn-outline-dark w-100", method: :POST %>
-            <% else %>
-              <%= link_to 'Follow', follow_path(user.id), class: "btn btn-outline-dark w-100", method: :POST %>
-            <% end %>
-          </div>
-        <% end %>
+<div class="d-flex justify-content-between">
+  <h4 class="card-title">Follows</h4>
+  <h4 class="card-title"><%= link_to "#{user.follower.count}", user_follows_path(user.id) %></h4>
+</div>
+<div class="d-flex justify-content-between">
+  <h4 class="card-title">Followers</h4>
+  <h4 class="card-title"><%= link_to "#{user.followed.count}", user_followers_path(user.id) %></h4>
+</div>
+<div class="d-flex justify-content-between my-1">
+  <%= link_to "Visit GitHub", "#{user.github_url}", class: "btn btn-dark w-100"%>
+</div>
+<% if user_signed_in? %>
+  <% unless user == current_user %>
+    <div class="d-flex justify-content-between my-1">
+      <% if current_user.following?(user) %>
+        <%= link_to 'Unfollow', unfollow_path(user.id), class: "btn btn-outline-dark w-100", method: :POST, remote: true %>
+      <% else %>
+        <%= link_to 'Follow', follow_path(user.id), class: "btn btn-outline-dark w-100", method: :POST, remote: true %>
       <% end %>
+    </div>
+  <% end %>
+<% end %>
