--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -11,11 +11,13 @@
         <h4 class="card-title">Name</h4>
         <h4 class="card-title"><%= @user.name %></h4>
       </div>
-      <div class="d-flex justify-content-between">
+      <div id="contributions" class="d-flex justify-content-between">
         <h4 class="card-title">Contributions</h4>
         <h4 class="card-title"><%= @user.contributions %></h4>
       </div>
-      <%= render 'relationships/relationship', user: @user %>
+      <span id="relation">
+      <%= render partial: 'relationships/relationship', locals: {user: @user} %>
+      </span>
       <% if @user == current_user %>
         <div class="d-flex justify-content-between my-1">
           <%= link_to "Update Contributions", edit_user_path(@user.id), class: "btn btn-outline-dark w-100"%>
