--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -11,7 +11,7 @@
         <h4 class="card-title">Name</h4>
         <h4 class="card-title"><%= @user.name %></h4>
       </div>
-      <div id="contributions" class="d-flex justify-content-between">
+      <div class="d-flex justify-content-between">
         <h4 class="card-title">Contributions</h4>
         <h4 class="card-title"><%= @user.contributions %></h4>
       </div>
