--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,34 +1,7 @@
 <div class="col-12 mt-3">
   <h4 class="display-5"><i class="fas fa-book mr-2"></i>User / <%= @user.name %></h4>
 </div>
-<div class="col-12 col-lg-4">
-  <div class="card mt-3 h-100">
-    <div class="card-body">
-      <div class="d-flex justify-content-center">
-        <h4 class="card-title">Image</h4>
-      </div>
-      <div class="d-flex justify-content-between">
-        <h4 class="card-title">Name</h4>
-        <h4 class="card-title"><%= @user.name %></h4>
-      </div>
-      <div class="d-flex justify-content-between">
-        <h4 class="card-title">Contributions</h4>
-        <h4 class="card-title"><%= @user.contributions %></h4>
-      </div>
-      <span id="relation">
-      <%= render partial: 'relationships/relationship', locals: {user: @user} %>
-      </span>
-      <% if @user == current_user %>
-        <div class="d-flex justify-content-between my-1">
-          <%= link_to "Update Contributions", edit_user_path(@user.id), class: "btn btn-outline-dark w-100"%>
-        </div>
-        <div class="d-flex justify-content-between my-1">
-          <%= link_to "New Post", new_post_path, class: "btn btn-outline-dark w-100"%>
-        </div>
-      <% end %>
-    </div>
-  </div>
-</div>
+<%= render partial: 'users/user', locals: {user: @user} %>
 <div class="col-12 col-lg-8">
   <div class="card mt-3 h-100">
     <div class="card-body">
