--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -43,7 +43,7 @@
           </tr>
         </thead>
         <tbody>
-          <% @user.posts.each do |post| %>
+          <% @posts.each do |post| %>
             <tr>
               <td><%= post.genre.name %></td>
               <td><%= link_to post_path(post) do %><%= post.title %><% end %></td>
@@ -51,6 +51,7 @@
           <% end %>
         </tbody>
       </table>
+      <%= paginate @posts %>
     </div>
   </div>
 </div>
