fix follows and followers

--- a/app/views/users/follows.html.erb
+++ b/app/views/users/follows.html.erb
@@ -18,19 +18,8 @@
         </thead>
         <tbody>
           <% @user.following_user.each do |user| %>
-            <tr>
-              <td><%= link_to "#{user.name}", user_path(user) %></td>
-              <td><%= link_to "#{user.follower.count}", user_follows_path(user) %></td>
-              <td><%= link_to "#{user.followed.count}", user_followers_path(user) %></td>
-              <td class="p-1">
-                <% unless user == current_user %>
-                  <% if current_user.following?(user) %>
-                    <%= link_to 'Unfollow', unfollow_path(user), class: "btn btn-outline-dark", method: :POST %>
-                  <% else %>
-                    <%= link_to 'Follow', follow_path(user), class: "btn btn-outline-dark", method: :POST %>
-                  <% end %>
-                <% end %>
-              </td>
+            <tr id="relationbtn_<%= user.id %>">
+              <%= render partial: 'relationships/relationbtn', locals: {user: user} %>
             </tr>
           <% end %>
         </tbody>
