--- a/app/views/posts/new.html.erb
+++ b/app/views/posts/new.html.erb
@@ -33,10 +33,7 @@
       <div class="d-flex justify-content-center">
         <h4 class="card-title">Preview</h4>
       </div>
-      <div id="editor"class="justify-content-center">
-      </div>
+      <div id="editor" class="justify-content-center"></div>
     </div>
   </div>
 </div>
-<!-- リアルタイムプレビュー -->
-<%= javascript_include_tag "preview.js" %>
