--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -4,8 +4,9 @@
 <div class="col-12 col-lg-4">
   <div class="card mt-3 h-100">
     <div class="card-body">
-      <div class="d-flex justify-content-center">
-        <h4 class="card-title">Image</h4>
+      <div class="row justify-content-center">
+        <div class="col-12"><h4 class="card-title text-center">Profile</h4></div>
+        <div class="col-12"><%= showconimg %></div>
       </div>
       <div class="d-flex justify-content-between">
         <h4 class="card-title">Name</h4>
