--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -28,6 +28,12 @@
             <li class="nav-item">
               <%= link_to 'ユーザーページ', user_path(current_user), class: 'nav-link' %>
             </li>
+            <% if unchecked_notifications.any? %>
+                <i class="fa fa-circle" style="color: gold;"></i>
+            <% end %>
+            <li class="nav-item">
+                <%= link_to "NOTICE", notifications_path, class: "nav-link" %>
+            </li>
             <li class="nav-item">
               <%= link_to 'ログアウト', destroy_user_session_path, class: 'nav-link', method: :delete %>
             </li>
