--- a/app/views/notifications/index.html.erb
+++ b/app/views/notifications/index.html.erb
@@ -1,8 +1,12 @@
-<h3 class="text-center">通知</h3>
-<% if @notifications.exists? %>
-    <div class="users-index">
-        <%= render @notifications %>
+<div class="col-12 mt-3">
+  <h4 class="display-5"><i class="fas fa-book mr-2"></i>通知一覧</h4>
+</div>
+<div class="col-12 mt-3">
+  <% if @notifications.exists? %>
+    <div class="list-group">
+      <%= render @notifications %>
     </div>
-<% else %>
+  <% else %>
     <p>通知はありません</p>
-<% end %>
+  <% end %>
+</div>
