--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -26,13 +26,15 @@
               <%= link_to 'ランキング', users_path, class: 'nav-link' %>
             </li>
             <li class="nav-item">
-              <%= link_to 'ユーザーページ', user_path(current_user), class: 'nav-link' %>
+              <%= link_to 'マイページ', user_path(current_user), class: 'nav-link' %>
             </li>
-            <% if unchecked_notifications.any? %>
-                <i class="fa fa-circle" style="color: gold;"></i>
-            <% end %>
             <li class="nav-item">
-                <%= link_to "NOTICE", notifications_path, class: "nav-link" %>
+                <%= link_to notifications_path, class: "nav-link" do %>
+                  通知
+                  <% if unchecked_notifications.any? %>
+                    <span>(新着<%= unchecked_notifications.count %>件)</span>
+                  <% end %>
+                <% end %>
             </li>
             <li class="nav-item">
               <%= link_to 'ログアウト', destroy_user_session_path, class: 'nav-link', method: :delete %>
