--- a/app/views/notifications/index.html.erb
+++ b/app/views/notifications/index.html.erb
@@ -1,5 +1,5 @@
 <div class="col-12 mt-3">
-  <h4 class="display-5"><i class="fas fa-book mr-2"></i>通知一覧</h4>
+  <h4 class="display-5"><i class="fas fa-book mr-2"></i><%= t'notice.notice' %></h4>
 </div>
 <div class="col-12 mt-3">
   <% if @notifications.exists? %>
@@ -7,6 +7,6 @@
       <%= render @notifications %>
     </div>
   <% else %>
-    <p>通知はありません</p>
+    <p><%= t'notice.nonotice' %></p>
   <% end %>
 </div>
