--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,18 +1,18 @@
-<div class="col-12 mt-3">
-  <h4 class="display-5"><i class="fas fa-book mr-2"></i>Contributions Ranking</h4>
+<div class="col-12 my-3">
+  <h4 class="display-5"><i class="fas fa-book mr-2"></i><%= t'ranking.cr' %></h4>
 </div>
-<div class="col-12">
-  <div class="card mt-3">
+<div class="col-12 mb-3">
+  <div class="card">
     <div class="card-body">
       <div class="d-flex justify-content-center">
-        <h4 class="card-title">Ranking</h4>
+        <h4 class="card-title"><%= t'ranking.rg' %></h4>
       </div>
       <table class="table">
         <thead class="thead-light">
           <tr>
-            <th>Rank</th>
-            <th>Name</th>
-            <th>Contributions</th>
+            <th><%= t'ranking.r' %></th>
+            <th><%= t'ranking.name' %></th>
+            <th><%= t'ranking.cs' %></th>
             <th></th>
           </tr>
         </thead>
