--- a/app/views/posts/edit.html.erb
+++ b/app/views/posts/edit.html.erb
@@ -1,27 +1,27 @@
 <div class="col-12 mt-3">
-  <h4 class="display-5"><i class="fas fa-book mr-2"></i>Posts / Edit</h4>
+  <h4 class="display-5"><i class="fas fa-book mr-2"></i><%= t'posts.post'%> / <%= t'posts.edit'%></h4>
 </div>
 <div class="col-12 col-lg-6 mx-auto">
   <div class="card mt-3 h-100">
     <div class="card-body">
       <div class="d-flex justify-content-center">
-        <h4 class="card-title">Edit</h4>
+        <h4 class="card-title"><%= t'posts.edit'%></h4>
       </div>
       <%= form_with model:@post, local:true do |f| %>
         <div class="form-group">
-          <%= f.label :title %>
+          <%= f.label "#{t'activerecord.attributes.post.title'}" %>
           <%= f.text_field :title, class: 'form-control' %>
         </div>
         <div class="form-group">
-          <%= f.label :genre %>
+          <%= f.label "#{t'activerecord.attributes.post.genre'}" %>
           <%= f.collection_select :genre_id, @genres, :id, :name, {prompt: '-- 選択してください --'}, class: "custom-select" %>
         </div>
         <div class="form-group">
-          <%= f.label :body %>
+          <%= f.label "#{t'activerecord.attributes.post.body'}" %>
           <%= f.text_area :body, class: 'form-control' %>
         </div>
         <div class="form-group">
-          <%= f.submit class: 'btn btn-success' %>
+          <%= f.submit "#{t'posts.submit'}", class: 'btn btn-success' %>
         </div>
       <% end %>
     </div>
@@ -31,7 +31,7 @@
   <div class="card mt-3 h-100">
     <div class="card-body">
       <div class="d-flex justify-content-center">
-        <h4 class="card-title">Preview</h4>
+        <h4 class="card-title"><%= t'posts.preview'%></h4>
       </div>
       <div id="editor"class="justify-content-center">
       </div>
