--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,18 +1,18 @@
-<div class="col-12 mt-3">
-  <h4 class="display-5"><i class="fas fa-book mr-2"></i>Posts</h4>
+<div class="col-12 my-3">
+  <h4 class="display-5"><i class="fas fa-book mr-2"></i><%= t'posts.posts' %></h4>
 </div>
-<div class="col-12">
-  <div class="card mt-3">
+<div class="col-12 mb-3">
+  <div class="card">
     <div class="card-body">
       <div class="d-flex justify-content-center">
-        <h4 class="card-title">Posts</h4>
+        <h4 class="card-title"><%= t'posts.posts' %></h4>
       </div>
       <table class="table">
         <thead class="thead-light">
           <tr>
-            <th>Genre</th>
-            <th>Title</th>
-            <th>Name</th>
+            <th><%= t'activerecord.models.genre' %></th>
+            <th><%= t'activerecord.attributes.post.title' %></th>
+            <th><%= t'posts.name' %></th>
             <th></th>
           </tr>
         </thead>
