--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -1,5 +1,5 @@
 <div class="col-12 mt-3">
-  <h4 class="display-5"><i class="fas fa-book mr-2"></i>Posts / <%= @post.title %></h4>
+  <h4 class="display-5"><i class="fas fa-book mr-2"></i><%= t'posts.post'%> / <%= @post.title %></h4>
 </div>
 <div class="col-12 col-lg-8 mx-auto">
   <div class="card mt-3">
@@ -22,8 +22,8 @@
       <% if @post.user = current_user%>
         <div class="d-flex justify-content-center mb-3">
           <p class="card-text col-11">
-            <%= link_to "edit", edit_post_path(@post) %>
-            <%= link_to 'destroy', post_path(@post), method: :delete, data: { confirm: '本当に消しますか？' } %>
+            <%= link_to "#{t'posts.edit'}", edit_post_path(@post) %>
+            <%= link_to "#{t'posts.destroy'}", post_path(@post), method: :delete, data: { confirm: '本当に消しますか？' } %>
           </p>
         </div>
       <% end %>
