--- a/app/views/relationships/_relationbtn.html.erb
+++ b/app/views/relationships/_relationbtn.html.erb
@@ -5,9 +5,9 @@
   <% if user_signed_in? %>
     <% unless user == current_user %>
       <% if current_user.following?(user) %>
-        <%= link_to 'Unfollow', unfollow_path(user), class: "btn btn-outline-dark", method: :POST, remote: true %>
+        <%= link_to "#{t'relation.unfollow'}", unfollow_path(user), class: "btn btn-outline-dark", method: :POST, remote: true %>
       <% else %>
-        <%= link_to 'Follow', follow_path(user), class: "btn btn-outline-dark", method: :POST, remote: true %>
+        <%= link_to "#{t'relation.follow'}", follow_path(user), class: "btn btn-outline-dark", method: :POST, remote: true %>
       <% end %>
     <% end %>
   <% end %>
