--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -1,32 +1,33 @@
-<div class="col-12 mt-3">
-  <h4 class="display-5"><i class="fas fa-book mr-2"></i>Update Contributions / <%= @user.name %></h4>
+<div class="col-12 my-3">
+  <h4 class="display-5"><i class="fas fa-book mr-2"></i><%= t'user.uc' %> / <%= @user.name %></h4>
 </div>
-<div class="col-12 col-lg-4 mx-auto">
-  <div class="card mt-3 h-100">
+<div class="col-12 mb-3 col-lg-4 mx-auto">
+  <div class="card h-100">
     <div class="card-body">
-      <div class="d-flex justify-content-center">
-        <h4 class="card-title">Image</h4>
+      <div class="row justify-content-center">
+        <div class="col-12"><h4 class="card-title text-center"><%= t'user.profile' %></h4></div>
+        <div class="col-12"><%= showconimg %></div>
       </div>
       <div class="d-flex justify-content-between">
-        <h4 class="card-title">Name</h4>
+        <h4 class="card-title"><%= t'user.name' %></h4>
         <h4 class="card-title"><%= @user.name %></h4>
       </div>
       <div class="d-flex justify-content-between">
-        <h4 class="card-title">Contributions</h4>
+        <h4 class="card-title"><%= t'user.cs' %></h4>
         <h4 class="card-title"><%= @user.contributions %></h4>
       </div>
       <div class="d-flex justify-content-between">
-        <h4 class="card-title">Follows</h4>
-        <h4 class="card-title"><a href="#">3</a></h4>
+        <h4 class="card-title"><%= t'relation.follows'%></h4>
+        <h4 class="card-title"><%= link_to "#{@user.follower.count}", user_follows_path(@user.id) %></h4>
       </div>
       <div class="d-flex justify-content-between">
-        <h4 class="card-title">Followers</h4>
-        <h4 class="card-title"><a href="#">3</a></h4>
+        <h4 class="card-title"><%= t'relation.followers'%></h4>
+        <h4 class="card-title"><%= link_to "#{@user.followed.count}", user_followers_path(@user.id) %></h4>
       </div>
     <%= form_with model:@user, local:true do |f| %>
         <%= f.text_field :contributions, value: @contributions, class: "form-control" %>
         <div class="d-flex justify-content-between my-1">
-        <%= f.submit "Update", class: 'btn btn-outline-dark w-100' %>
+        <%= f.submit "#{t'user.update'}", class: 'btn btn-outline-dark w-100' %>
         </div>
     <% end %>
     </div>
