--- a/app/views/users/follows.html.erb
+++ b/app/views/users/follows.html.erb
@@ -1,18 +1,18 @@
 <div class="col-12 mt-3">
-  <h4 class="display-5"><i class="fas fa-book mr-2"></i><%= @user.name %> / Follows</h4>
+  <h4 class="display-5"><i class="fas fa-book mr-2"></i><%= @user.name %> / <%= t'relation.follows' %></h4>
 </div>
 <div class="col-12">
   <div class="card mt-3">
     <div class="card-body">
       <div class="d-flex justify-content-center">
-        <h4 class="card-title">Follows</h4>
+        <h4 class="card-title"><%= t'relation.follows' %></h4>
       </div>
       <table class="table">
         <thead class="thead-light">
           <tr>
-            <th>Name</th>
-            <th>Follows</th>
-            <th>Followers</th>
+            <th><%= t'user.name' %></th>
+            <th><%= t'relation.follows' %></th>
+            <th><%= t'relation.followers' %></th>
             <th></th>
           </tr>
         </thead>
