--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,19 +1,19 @@
-<div class="col-12 mt-3">
-  <h4 class="display-5"><i class="fas fa-book mr-2"></i>User / <%= @user.name %></h4>
+<div class="col-12 my-3">
+  <h4 class="display-5"><i class="fas fa-book mr-2"></i><%= t'user.user' %> / <%= @user.name %></h4>
 </div>
-<div class="col-12 col-lg-4">
-  <div class="card mt-3 h-100">
+<div class="col-12 mb-3 col-lg-4">
+  <div class="card h-100">
     <div class="card-body">
       <div class="row justify-content-center">
-        <div class="col-12"><h4 class="card-title text-center">Profile</h4></div>
+        <div class="col-12"><h4 class="card-title text-center"><%= t'user.profile' %></h4></div>
         <div class="col-12"><%= showconimg %></div>
       </div>
       <div class="d-flex justify-content-between">
-        <h4 class="card-title">Name</h4>
+        <h4 class="card-title"><%= t'user.name' %></h4>
         <h4 class="card-title"><%= @user.name %></h4>
       </div>
       <div class="d-flex justify-content-between">
-        <h4 class="card-title">Contributions</h4>
+        <h4 class="card-title"><%= t'user.cs' %></h4>
         <h4 class="card-title"><%= @user.contributions %></h4>
       </div>
       <span id="relation">
@@ -21,26 +21,26 @@
       </span>
       <% if @user == current_user %>
         <div class="d-flex justify-content-between my-1">
-          <%= link_to "Update Contributions", edit_user_path(@user.id), class: "btn btn-outline-dark w-100"%>
+          <%= link_to "#{t'user.uc'}", edit_user_path(@user.id), class: "btn btn-outline-dark w-100"%>
         </div>
         <div class="d-flex justify-content-between my-1">
-          <%= link_to "New Post", new_post_path, class: "btn btn-outline-dark w-100"%>
+          <%= link_to "#{t'user.np'}", new_post_path, class: "btn btn-outline-dark w-100"%>
         </div>
       <% end %>
     </div>
   </div>
 </div>
-<div class="col-12 col-lg-8">
-  <div class="card mt-3 h-100">
+<div class="col-12 mb-3 col-lg-8">
+  <div class="card h-100">
     <div class="card-body">
       <div class="d-flex justify-content-center">
-        <h4 class="card-title">Posts</h4>
+        <h4 class="card-title"><%= @user.name %><%= t'user.posts' %></h4>
       </div>
       <table class="table">
         <thead class="thead-light">
           <tr>
-            <th>Genre</th>
-            <th>Title</th>
+            <th><%= t'activerecord.models.genre' %></th>
+            <th><%= t'activerecord.attributes.post.title' %></th>
           </tr>
         </thead>
         <tbody>
