--- a/app/assets/stylesheets/posts.scss
+++ b/app/assets/stylesheets/posts.scss
@@ -3,8 +3,8 @@
 // You can use Sass (SCSS) here: http://sass-lang.com/
 .fa-times-circle{
   position:absolute;
-  top:-8%;
-  right:3%;
+  top:-25px;
+  right:5px;
 }
 .modal{
   display:none;
