--- a/app/views/favorites/_fav.html.erb
+++ b/app/views/favorites/_fav.html.erb
@@ -9,5 +9,5 @@
   <% end %>
 <% end %>
 <% else %>
-  <a href="#"><i class="far fa-thumbs-up"></i><%= post.favorites.count.to_s %></a>
+  <a class="fav"><i class="far fa-thumbs-up"></i><%= post.favorites.count.to_s %></a>
 <% end %>
