--- a/app/views/reports/_report.html.erb
+++ b/app/views/reports/_report.html.erb
@@ -3,10 +3,10 @@
     <p class="text-black-50"><%= t'report.reported' %></p>
   <% else %>
     <a id="repo" class="text-black-50"><i class="fa fa-flag"></i><%= t'report.sendreport' %></a>
-    <div class="modal js-modal">
-      <div class="modal_bg js-modal-close"></div>
+    <div class="modal js-modal-repo">
+      <div class="modal_bg js-modal-close-repo"></div>
         <div class="modal_content col-10 col-lg-6">
-          <i class="fa fa-times-circle text-white js-modal-close" aria-hidden="true"></i>
+          <i class="fa fa-times-circle text-white js-modal-close-repo" aria-hidden="true"></i>
           <div class="d-flex justify-content-center">
             <h4 class="card-title"><%= t'report.report' %></h4>
           </div>
