--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -25,7 +25,7 @@
         <h4 class="card-title"><%= link_to "#{@user.followed.count}", user_followers_path(@user.id) %></h4>
       </div>
     <%= form_with model:@user, local:true do |f| %>
-        <%= f.text_field :contributions, value: @contributions, class: "form-control" %>
+        <%= f.text_field :contributions, value: @contributions, class: "form-control", :readonly => true %>
         <div class="d-flex justify-content-between my-1">
         <%= f.submit "#{t'user.update'}", class: 'btn btn-outline-dark w-100' %>
         </div>
