--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -44,11 +44,15 @@
           </tr>
         </thead>
         <tbody>
-          <% @posts.each do |post| %>
-            <tr>
-              <td><%= post.genre.name %></td>
-              <td><%= link_to post_path(post) do %><%= post.title %><% end %></td>
-            </tr>
+          <% if @posts.any? %>
+            <% @posts.each do |post| %>
+              <tr>
+                <td><%= post.genre.name %></td>
+                <td><%= link_to post_path(post) do %><%= post.title %><% end %></td>
+              </tr>
+            <% end %>
+          <% else %>
+            <td colspan="2" class="text-center">投稿はありません。</td>
           <% end %>
         </tbody>
       </table>
