add valid message

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -94,6 +94,13 @@
             <% if notice.present? %>
               <div class="alert alert-secondary col-12 mt-2"><%= notice %></div>
             <% end %>
+            <% if alert.present? %>
+              <div class="alert alert-secondary col-12 mt-2">
+                <% alert.each do |message| %>
+                  <div><%= message %></div>
+                <% end %>
+              </div>
+            <% end %>
             <%= yield %>
           </div>
         </div>
