fix post rank layout

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -29,3 +29,5 @@ div.wrap{
   overflow: hidden;
 }
 main{min-height: 100vh;}
+.px-05{padding-left: 0.4rem!important;padding-right: 0.4rem!important;}
+.p-list{padding:0.75rem 0.75rem!important;}
