--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -6,7 +6,7 @@
     <div class="card-body">
       <div class="row justify-content-center">
         <div class="col-12"><h4 class="card-title text-center"><%= t'user.profile' %></h4></div>
-        <div class="col-12"><%= showconimg %></div>
+        <div class="d-flex justify-content-center col-12"><%= showconimg %></div>
       </div>
       <div class="d-flex justify-content-between">
         <h4 class="card-title"><%= t'user.name' %></h4>
@@ -36,27 +36,21 @@
       <div class="d-flex justify-content-center">
         <h4 class="card-title"><%= @user.name %><%= t'user.posts' %></h4>
       </div>
-      <table class="table">
-        <thead class="thead-light">
-          <tr>
-            <th><%= t'activerecord.models.genre' %></th>
-            <th><%= t'activerecord.attributes.post.title' %></th>
-          </tr>
-        </thead>
-        <tbody>
-          <% if @posts.any? %>
-            <% @posts.each do |post| %>
-              <tr>
-                <td><%= post.genre.name %></td>
-                <td><%= link_to post_path(post) do %><% if post.title.length >= 5 %><%= post.title.slice(0..12).insert(-1, "…") %><% else %><%= post.title %><% end %><% end %></td>
-              </tr>
-            <% end %>
-          <% else %>
-            <td colspan="2" class="text-center">投稿はありません。</td>
-          <% end %>
-        </tbody>
-      </table>
-      <%= paginate @posts %>
+      <div class="list-group">
+        <% @posts.each do |post| %>
+          <div class="list-group-item list-group-item-action">
+            <div class="d-flex justify-content-between">
+              <div><%= link_to post_path(post), class: "post-title text-dark font-weight-bold" do %><% if post.title.length >= 5 %><%= post.title.slice(0..12).insert(-1, "…") %><% else %><%= post.title %><% end %><% end %></div>
+              <small class="text-muted"><%= " (#{time_ago_in_words(post.created_at)}#{t'notice.ago'})" %></small>
+            </div>
+            <div class="d-flex justify-content-between">
+              <small class="align-self-end"><%= t'activerecord.models.genre' %>: <%= post.genre.name %></small>
+              <div id="favs_buttons_<%= post.id %>"><%= render 'favorites/fav', post: post %></div>
+            </div>
+          </div>
+        <% end %>
+      </div>
     </div>
+    <%= paginate @posts %>
   </div>
 </div>
