--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -19,11 +19,11 @@
       <div class="col-11 mx-auto mb-3">
         <%= render 'reports/report', post: @post %>
       </div>
-      <% if @post.user = current_user %>
+      <% if @user == current_user %>
         <div class="d-flex justify-content-center mb-3">
           <p class="card-text col-11">
-            <%= link_to "#{t'posts.edit'}", edit_post_path(@post) %>
-            <%= link_to "#{t'posts.destroy'}", post_path(@post), method: :delete, data: { confirm: '本当に消しますか？' } %>
+            <%= link_to "#{t'posts.edit'}", edit_post_path(@post), class:"text-black-50" %>
+            <%= link_to "#{t'posts.destroy'}", post_path(@post), class:"text-black-50", method: :delete, data: { confirm: '本当に消しますか？' } %>
           </p>
         </div>
       <% end %>
