--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -37,16 +37,22 @@
         <h4 class="card-title"><%= @user.name %><%= t'user.posts' %></h4>
       </div>
       <div class="list-group">
-        <% @posts.each do |post| %>
-          <div class="list-group-item list-group-item-action">
-            <div class="d-flex justify-content-between">
-              <div><%= link_to post_path(post), class: "post-title text-dark font-weight-bold" do %><% if post.title.length >= 5 %><%= post.title.slice(0..12).insert(-1, "…") %><% else %><%= post.title %><% end %><% end %></div>
-              <small class="text-muted"><%= " (#{time_ago_in_words(post.created_at)}#{t'notice.ago'})" %></small>
+        <% if @posts.any? %>
+          <% @posts.each do |post| %>
+            <div class="list-group-item list-group-item-action">
+              <div class="d-flex justify-content-between">
+                <div><%= link_to post_path(post), class: "post-title text-dark font-weight-bold" do %><% if post.title.length >= 5 %><%= post.title.slice(0..12).insert(-1, "…") %><% else %><%= post.title %><% end %><% end %></div>
+                <small class="text-muted"><%= " (#{time_ago_in_words(post.created_at)}#{t'notice.ago'})" %></small>
+              </div>
+              <div class="d-flex justify-content-between">
+                <small class="align-self-end"><%= t'activerecord.models.genre' %>: <%= post.genre.name %></small>
+                <div id="favs_buttons_<%= post.id %>"><%= render 'favorites/fav', post: post %></div>
+              </div>
             </div>
-            <div class="d-flex justify-content-between">
-              <small class="align-self-end"><%= t'activerecord.models.genre' %>: <%= post.genre.name %></small>
-              <div id="favs_buttons_<%= post.id %>"><%= render 'favorites/fav', post: post %></div>
-            </div>
+          <% end %>
+        <% else %>
+          <div class="list-group-item">
+            <div class="text-center">投稿はありません</div>
           </div>
         <% end %>
       </div>
