--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -8,7 +8,7 @@
         <h4 class="card-title"><%= @post.title %></h4>
       </div>
       <div class="d-flex justify-content-center mb-3">
-        <p class="card-text"><%= @post.genre.name %></p>
+        <p class="card-text"><%= link_to "/posts?genre=#{@post.genre.name}", class: "text-black-50" do %><%= @post.genre.name %><% end %></p>
       </div>
       <div class="col-11 mx-auto mb-3 markdown">
         <%= markdown(@post.body) %>
