--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -45,7 +45,7 @@
                 <small class="text-muted"><%= " (#{time_ago_in_words(post.created_at)}#{t'notice.ago'})" %></small>
               </div>
               <div class="d-flex justify-content-between">
-                <small class="align-self-end"><%= t'activerecord.models.genre' %>: <%= post.genre.name %></small>
+                <small class="align-self-end"><%= link_to "/posts?genre=#{post.genre.name}", class: "text-black-50" do %><%= t'activerecord.models.genre' %>: <%= post.genre.name %><% end %></small>
                 <div id="favs_buttons_<%= post.id %>"><%= render 'favorites/fav', post: post %></div>
               </div>
             </div>
