--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -14,7 +14,7 @@
               <small><%= link_to user_path(post.user), class: "text-muted" do %><%= post.user.name %><% end %><%= t'posts.hasposted' %></small>
               <small class="text-muted"><%= " (#{time_ago_in_words(post.created_at)}#{t'notice.ago'})" %></small>
             </div>
-              <div class="mt-2 mb-1"><%= link_to post_path(post), class: "post-title text-dark font-weight-bold" do %><% if post.title.length >= 12 %><%= post.title.slice(0..12).insert(-1, "…") %><% else %><%= post.title %><% end %><% end %></div>
+              <div class="mt-2 mb-1"><%= link_to post_path(post), class: "post-title text-dark font-weight-bold" do %><% if sum_bytesize_for(post.title.slice(0..20)) <= 29 %><%= post.title.truncate(30) %><% elsif sum_bytesize_for(post.title.slice(0..20)) >= 30 %><%= post.title.truncate(19) %><% end %><% end %></div>
             <div class="d-flex justify-content-between">
               <small class="align-self-end"><%= link_to "/posts?genre=#{post.genre.name}", class: "text-black-50" do %><%= t'activerecord.models.genre' %>: <%= post.genre.name %><% end %></small>
               <div id="favs_buttons_<%= post.id %>"><%= render 'favorites/fav', post: post %></div>
